--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
     "version": "0.1.0",
     "dependencies": {
         "jimp": "0.2.27",
-        "mousetrap": "*",
-        "source-map-support": "^0.4.11",
-        "mathjs": "*",
+        "js-beautify": "^1.7.5",
         "kit": "git+https://github.com/riatzukiza/kit.git",
         "kit-events": "git+https://github.com/riatzukiza/kit-events.git",
         "kit-file-system": "git+https://github.com/riatzukiza/kit-file-system.git",
         "kit-html": "git+https://github.com/riatzukiza/kit-html.git",
         "kit-http": "git+https://github.com/riatzukiza/kit-http.git",
         "kit-interface": "git+https://github.com/riatzukiza/kit-interface.git",
+        "mathjs": "*",
+        "mousetrap": "*",
+        "react": "^16.3.1",
+        "source-map-support": "^0.4.11",
         "tree-kit": "git+https://github.com/riatzukiza/tree-kit.git",
         "webgl": "git+https://bitbucket.org/kettlelogic/andy_webgl.git"
     }
