--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "dependencies": {
         "jimp": "0.2.27",
         "js-beautify": "^1.7.5",
-        "kit": "git+https://github.com/riatzukiza/kit.git",
-        "kit-actor": "git+https://github.com/riatzukiza/kit-actor.git",
-        "kit-async": "git+https://github.com/riatzukiza/kit-async.git",
-        "kit-events": "git+https://github.com/riatzukiza/kit-events.git",
-        "kit-file-system": "git+https://github.com/riatzukiza/kit-file-system.git",
-        "kit-html": "git+https://github.com/riatzukiza/kit-html.git",
-        "kit-http": "git+https://github.com/riatzukiza/kit-http.git",
-        "kit-interface": "git+https://github.com/riatzukiza/kit-interface.git",
-        "kit-repl": "git+https://github.com/riatzukiza/kit-repl.git",
+        "kit": "riatzukiza/kit.git",
+        "kit-actor": "riatzukiza/kit-actor.git",
+        "kit-async": "riatzukiza/kit-async.git",
+        "kit-events": "riatzukiza/kit-events.git",
+        "kit-file-system": "riatzukiza/kit-file-system.git",
+        "kit-html": "riatzukiza/kit-html.git",
+        "kit-http": "riatzukiza/kit-http.git",
+        "kit-interface": "riatzukiza/kit-interface.git",
+        "kit-repl": "riatzukiza/kit-repl.git",
         "mathjs": "*",
         "mousetrap": "*",
         "react": "^16.3.1",
